--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 			<attribute name="javadoc_location" value="jar:file:/C:/Users/user/Downloads/microba-0.4.4.3-full/microba-0.4.4.3-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="res"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
